# nano-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README_cn.md
example/: Cargo.toml  build.rs
example/etc/: config.yaml
example/src/: api_info.rs  doc.rs  main.rs  routes.rs
example/src/api/pet/: mod.rs  store.rs
example/src/layers/: auth.rs
example/src/model/: pet.rs
example/src/types/: pet.rs
nano-rs/: Cargo.toml  README.md
nano-rs-build/: Cargo.toml  README.md
nano-rs-build/src/: api_doc.rs  api_file.rs  api_fn.rs  api_gen.rs  api_parse.rs  api_syn.rs  core.rs  lib.rs
nano-rs-core/: Cargo.toml  README.md
nano-rs-core/src/: lib.rs
nano-rs-core/src/config/: db.rs  etcd.rs  logger.rs  mod.rs  prometheus.rs  read.rs  redis.rs  rest.rs  rpc.rs
nano-rs-core/src/tracing/: mod.rs
nano-rs-extra/: Cargo.toml  README.md
nano-rs-extra/src/: lib.rs
nano-rs-extra/src/axum/: errors.rs  mod.rs  rest.rs  shutdown.rs  start.rs
nano-rs-extra/src/axum/extractor/: json.rs  mod.rs  path.rs
nano-rs-extra/src/axum/generator/: gen_api_info.rs  gen_doc.rs  gen_route.rs
nano-rs-extra/src/axum/handler/: mod.rs  not_page.rs
nano-rs-extra/src/axum/middleware/: mod.rs  trace.rs  trace_with_state.rs
nano-rs-extra/src/sea_orm/: mod.rs
nano-rs-extra/src/sea_orm/mysql/: config.rs
nano-rs-extra/src/sea_orm/postgres/: config.rs  gen_comments.rs  mod.rs
nano-rs-macro/: Cargo.toml
nano-rs-proc-macro-route/: Cargo.toml  README.md
nano-rs-proc-macro-route/src/: lib.rs
nano-rs-rpc/: Cargo.toml  README.md
nano-rs-rpc/src/grpc/: client.rs  mod.rs
nano-rs/src/: lib.rs
