[workspace]
members = ["nano-rs", "nano-rs-build", "nano-rs-core", "nano-rs-rpc", "nano-rs-macro", "nano-rs-extra", "nano-rs-proc-macro-route", "example"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
tonic = "0.11.0"
tokio = { version = "1.34.0", features = ["full"] }
etcd-client = "0.12"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.2" }
time = { version = "0.3.30", features = ["macros"] }
serde_json = "1.0.108"
tracing-opentelemetry-instrumentation-sdk = "0.18.0"
clap = { version = "4.5.3", features = ["derive"] }
tower = { version = "0.4.13", features = ["util", "filter"] }
tower-http = { version = "0.5.2", features = ["full"] }
axum = { version = "0.7.5" }
hyper = { version = "1.2.0", features = ["full"] }
http-body-util = "0.1.1"
axum-client-ip = "0.6.0"
