[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nano-rs = { path = "../nano-rs" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }


sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }


[build-dependencies]
nano-rs = { path = "../nano-rs" }
nano-rs-build = { path = "../nano-rs-build"}

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1