[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nano-rs = { path = "../nano-rs" }
axum = { workspace = true }
axum-client-ip = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }


sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }


[build-dependencies]
nano-rs = { path = "../nano-rs" }
nano-rs-build = { path = "../nano-rs-build" }
utoipa = { version = "4.2.3", features = ["axum_extras"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1