[package]
name = "nano-rs-build"
version = "0.1.1"
edition = "2021"
categories = ["web-programming", "config"]
description = "Light Web Build Kit"
rust-version = "1.66"
homepage = "https://github.com/CloverOS/nano-rs"
keywords = ["http", "web", "config", "auto-route"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CloverOS/nano-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
syn = { version = "2.0.58", features = ["full"] }

