[package]
name = "nano-rs-core"
version = "0.1.2"
edition = "2021"
categories = ["network-programming", "web-programming", "config"]
description = "Light Web Kit"
rust-version = "1.66"
homepage = "https://github.com/CloverOS/nano-rs"
keywords = ["http", "web", "config", "auto-route"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CloverOS/nano-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true}
tracing =  { workspace = true}
tracing-appender =  { workspace = true}
time =  { workspace = true}
clap = { workspace = true }
