[package]
name = "nano-rs-rpc"
version = "0.1.0"
edition = "2021"
categories = ["network-programming", "web-programming", "config"]
description = "Light Web Kit"
rust-version = "1.66"
homepage = "https://github.com/CloverOS/nano-rs"
keywords = ["http", "web", "config", "auto-route"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CloverOS/nano-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
etcd-client = { workspace = true }
nano-rs-core = { path = "../nano-rs-core" }
tower = "0.4.13"