[package]
name = "nano-rs"
version = "0.1.1"
edition = "2021"
categories = ["network-programming", "web-programming", "config"]
description = "Light Web Kit"
rust-version = "1.66"
homepage = "https://github.com/CloverOS/nano-rs"
keywords = ["http", "web", "config", "auto-route"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CloverOS/nano-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nano-rs-core = { path = "../nano-rs-core", version = "0.1.0" }
#nano-rs-rpc = { path = "../nano-rs-rpc" }
nano-rs-macro = { path = "../nano-rs-macro", version = "0.1.0" }
nano-rs-extra = { path = "../nano-rs-extra", version = "0.1.1" }
nano-rs-proc-macro-route = { path = "../nano-rs-proc-macro-route", version = "0.1.0" }

